# status-react

./: .env  .env.e2e  .env.jenkins  .env.nightly  .gitignore  .gitmodules  Gemfile  Jenkinsfile.nightly_fastlane  Jenkinsfile.upload_release  Jenkinsfile.upload_release_android  Jenkinsfile.upload_release_ios  Makefile  STATUS_GO_VERSION  clj-rn.conf.edn  deps.edn  project.clj  ubuntu-server.js
.github/: github-bot.yml
android/: build.gradle
ci/: Jenkinsfile  Jenkinsfile.android  Jenkinsfile.combined  Jenkinsfile.desktopbuild  Jenkinsfile.fastlane.clean  Jenkinsfile.ios  Jenkinsfile.linux  Jenkinsfile.macos  Jenkinsfile.nightly_desktop  Jenkinsfile.nightly_fastlane  Jenkinsfile.parameters  Jenkinsfile.release  Jenkinsfile.upload_release_android  Jenkinsfile.upload_release_ios  Jenkinsfile.windows  android.groovy  common.groovy  desktop.groovy  ios.groovy  mobile.groovy
deployment/: env
desktop/: CMakeLists.txt  CompleteBundleWin.cmake  Toolchain-Ubuntu-mingw64.cmake  main.cpp
desktop/reportApp/: CMakeLists.txt  reportpublisher.cpp
desktop_files/: .re-natal  package-lock.json  package.json
doc/: codebase-structure-and-guidelines.md
fastlane/: Fastfile  Matchfile
ios/: Podfile
mobile_files/: package-lock.json  package.json
scripts/: build-desktop.sh  build_no.sh  bundle-status-go.sh  create-desktop-linux-package.sh  create-desktop-mac-bundle.sh  create-desktop-package.sh  prepare-for-platform.sh  setup  sign-macos-pkg.sh  update-status-go.sh
translations/: af.json  bel.json  cs.json  da.json  de.json  el.json  en.json  es.json  es_419.json  es_ar.json  (+40 more)
(+495 files in other folders)
